# adventures-in-rust

./: README.md
aoc/day1/day1a/src/: main.rs
aoc/day1/day1b/src/: main.rs
projects/ch1/hello_world/: main.rs
projects/ch2/guessing_game/: Cargo.toml
projects/ch3/functions/src/: main.rs
projects/ch3/variables/src/: main.rs
projects/ch5/define_instantiate_structs/: Cargo.toml
projects/control_flow/src/: main.rs
projects/guessing_game/src/: main.rs
projects/ref_and_bor/src/: main.rs
rust-book/ch1/hello_world/: main
rust-book/ch4/ownership/src/: main.rs
rust-book/ch4/ref_and_bor/: Cargo.toml
rust-book/ch4/slice_type/src/: main.rs
rust-book/ch5/define_instantiate_structs/src/: main.rs
rust-by-example/format_print/: Cargo.toml
rust-by-example/format_print/src/: main.rs
